objects/DMAPP__Insight_Category_Type__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Levels__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Levels</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__MultipleSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MultipleSelection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Namespace__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Namespace</label>
        <referenceTo>DMAPP__Insight_Namespace__c</referenceTo>
        <relationshipLabel>Insight Category Types</relationshipLabel>
        <relationshipName>Insight_Category_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Smart Map Category Type</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Smart Category Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smart Map Category Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>